2010-01-08  H.J. Lu  <hongjiu.lu@intel.com>

	* elfedit.c (input_elf_type): New.
	(output_elf_type): Likewise.
	(elf_type): Likewise.
	(update_elf_header): Support updating ELF file type.
	(command_line_switch): Add OPTION_INPUT_TYPE and
	OPTION_OUTPUT_TYPE.
	(options): Likewise.
	(usage): Add --input-type and --output-type.
	(main): Handle OPTION_INPUT_TYPE and OPTION_OUTPUT_TYPE.  Check
	one of --output-mach and --output-type must be specified.

	* doc/binutils.texi: Document --input-type and --output-type
	for elfedit.

2010-01-08  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/binutils.texi: Fix a typo.

2010-01-08  H.J. Lu  <hongjiu.lu@intel.com>

	* elfedit.c (update_elf_header): Don't change input_elf_class
	nor input_elf_machine if they are -1.

2010-01-08  Tristan Gingold  <gingold@adacore.com>

	* ar.c: Remove bfd_special_undocumented_glue prototype.

2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	* elfedit.c (update_elf_header): Reformat.

2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (usage): Fix indent for --symbols.

2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/binutils.texi: Replace -histogram with --histogram.

2010-01-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/11131
	* Makefile.am (ELFEDIT_PROG): New.
	(bin_PROGRAMS): Add $(ELFEDIT_PROG).
	(CFILES): Add elfedit.c.
	(elfedit_DEPENDENCIES): New.
	(elfedit_SOURCES): Likewise.
	(elfedit_LDADD): Likewise.
	* Makefile.in: Regenerated.

	* elfedit.c: New.

	* doc/binutils.texi: Document elfedit.

	* doc/Makefile.am (man_MANS): Add elfedit.1.
	(elfedit.1): New.
	* doc/Makefile.in: Regenerated.

2010-01-06  Tristan Gingold  <gingold@adacore.com>

	* nm.c (usage): Remove extra blanks.

2010-01-04  H.J. Lu  <hongjiu.lu@intel.com>

	* objcopy.c: Update copyright.
	* readelf.c: Likewise.

2010-01-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/11130
	* objcopy.c (copy_object): Remove "Warning: " from error
	message.

2010-01-04  Nick Clifton  <nickc@redhat.com>

	PR 11128